// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseCard > renders default as expected 1`] = `
<div>
  <div
    class="border border-gray-300 rounded-xl px-6 pb-6 max-w-[323px]"
  >
    <img
      alt="Course Card Placeholder"
      class="w-full h-[165px] object-cover rounded-xl mt-6 mb-12"
      src="/test-image.jpg"
    />
    <h3
      class="text-bluedot-normal text-[24px] mb-4 font-serif font-extrabold leading-none"
    >
      Introduction to Testing
    </h3>
    <p
      class="text-bluedot-darker text-md mb-4 line-clamp-4"
    >
      Learn proper testing techniques
    </p>
    <div
      class="flex justify-between items-center"
    >
      <p
        class="text-left text-xs"
      >
        5 days
      </p>
      <p
        class="text-right text-xs border border-bluedot-lighter rounded-xl px-4 py-2 font-semibold"
      >
        Crash course
      </p>
    </div>
  </div>
</div>
`;

exports[`CourseCard > renders with optional args 1`] = `
<div>
  <div
    class="border border-gray-300 rounded-lg px-8 pb-4 max-w-[323px] custom-class"
  >
    <p
      class="uppercase font-semibold"
    >
      Featured course
    </p>
    <img
      alt="Course Card Placeholder"
      class="w-full h-[165px] object-cover rounded-lg"
      src="/test-image.jpg"
    />
    <h3
      class="text-bluedot-normal text-[24px] mb-4 font-serif font-extrabold leading-none"
    >
      Introduction to Testing
    </h3>
    <p
      class="text-bluedot-darker text-md mb-4 line-clamp-6"
    >
      Learn proper testing techniques
    </p>
    <div
      class="flex justify-between items-center"
    >
      <p
        class="text-left text-xs"
      >
        5 days
      </p>
      <p
        class="text-right text-xs border border-bluedot-lighter rounded-xl px-4 py-2 font-semibold"
      >
        Crash course
      </p>
    </div>
  </div>
</div>
`;

exports[`CourseCard > renders with optional yield 1`] = `
<div>
  <div
    class="border border-gray-300 rounded-xl px-6 pb-6 max-w-[323px]"
  >
    <img
      alt="Course Card Placeholder"
      class="w-full h-[165px] object-cover rounded-xl mt-6 mb-12"
      src="/test-image.jpg"
    />
    <h3
      class="text-bluedot-normal text-[24px] mb-4 font-serif font-extrabold leading-none"
    >
      Introduction to Testing
    </h3>
    <p
      class="text-bluedot-darker text-md mb-4 line-clamp-4"
    >
      Learn proper testing techniques
    </p>
    <div
      class="flex justify-between items-center"
    >
      <p
        class="text-left text-xs"
      >
        5 days
      </p>
      <p
        class="text-right text-xs border border-bluedot-lighter rounded-xl px-4 py-2 font-semibold"
      >
        Crash course
      </p>
    </div>
    <button
      data-testid="test-element"
      type="button"
    >
      Enroll Now
    </button>
  </div>
</div>
`;
